docs/4.8.0/documentation/documents/installation-guide/update.md
# Обновление

## Изменения в параметрах настройки

В данной версии продукта в части параметров изменений нет.

## Миграция с предыдущих версий

В случае если руководство по миграции отсутствует, то необходимо повторно запустить развертывание с указанием более
новой версии. В случае отсутствия информации по версии, считается что дополнительных действий для перехода на эту версию
не требуется.

### Миграция с версий 4.5.3 на версию 4.5.4

В версии 4.5.4 был исключен Syslog-ng, в связи с чем Syslog-ng необходимо отключить/удалить.

Параметры настройки и опции для интеграции с Fluent Bit перечислены в разделах
[Руководство по установке](../installation-guide/installation.md) и
[Описание параметров компонента IAM Proxy](../installation-guide/proxy-deploy-docker-description.md).

### Миграция с версий 4.5.2 на версию 4.5.3

Для версии 4.5.3 в RDS Client изменилось правило формирования полного URL для получения активной конфигурации: добавление
постфикса `/active-conf-json` к URL сервиса формирования конфигураций (опция `rds_server_urls`) было упразднено.

Для инсталляций разворачиваемых на VM в параметре `rds_server_urls` необходимо указывать полный URL до активной
конфигурации (см. примеры).
Для инсталляций разворачиваемых в средах контейнеризации выполнять изменение конфигурации не требуется.

> **Примеры**
>
> 1. Если используется RDS Server из поставки IAM:
> - было - rds_server_urls=https://my.corp:9443/rds-for-proxy
> - стало - rds_server_urls=https://my.corp:9443/rds-for-proxy/active-conf-json
>
> 2. Если используется собственный сервис формирования активной конфигурации, совместимый с форматом данных RDS Server:
> - rds_server_urls=https://my.corp/my-custom-service/custom/url/for/active/configuration

> Примечание: Если использовался RDS Server из поставки IAM - то необходимо:
> 1. Отказаться от RDS Server.
> 2. Реализовать RDS API и настроить его интеграцию с IAM Proxy.

### Миграция с версий 4.5.0 на версию 4.5.2

Для версии 4.5.2 в Syslog-ng была выполнена миграция на КМ Audit, в связи с чем поменялись параметры
настройки интеграции.

> Параметры с префиксом `rds.audit.kafka`.

> Параметры с префиксом `audit2`.

В рамках планирования балансировки, стоит учесть, что изменен алгоритм балансировки до бэкенд,
и сейчас по умолчанию алгоритм балансировки hash по `ip`+`xff`+`username` будет отключен.
При необходимости его включения, использовать опцию `proxy_sticky_backend_by_session_enable`, подробнее описано в
разделах [Руководство по установке](../installation-guide/installation.md) и
[Соответствие имен параметров для разных сред и инструментов установки](../installation-guide/params.md).

### Миграция с версий 4.4.* на версию 4.5.0

#### Миграция Proxy при установке на VM

> Важно! Перед установкой необходимо убедиться в том, что предыдущие инсталляции выведены из эксплуатации, если это не
> так, необходимо выполнить команды в терминале на серверах, где были развернуты сервисы:
> - sudo systemctl stop lb-nginx;
> - sudo systemctl stop nginx;
> - sudo systemctl disable lb-nginx;
> - sudo systemctl disable nginx.

Для миграции инсталляции на VM выполните следующие действия:

1. В профиле развертывания убрать каталог `nginx` из пути кастомных файлов,
   `ansible/inventories/DemoProfile/files/proxy/nginx/myfile... -> ansible/inventories/DemoProfile/files/proxy/myfile...`
   .
2. В профиле развертывания поменяйте пользователя с `nginx` на `iamproxy` (proxy_system_user: iamproxy).
3. Выполните скрипты подготовки на серверах (запустить ansible playbook `platformauth-system-prepare-playbook.yml`).
4. В секретах Vault переименовать `ansible_ssh_pass -> deployer_pass`
5. Добавить в профиль развертывания переменные `deployer_pass` и `deployer_user` (см. в примере профиля deploy, как
   правильно использовать новые переменные).

#### Миграция Proxy при установке на OSE

Для миграции инсталляции на OSE выполните следующие действия:

1. Выполнить миграцию конфигурационных параметров из дистрибутива, средствами продукта Platform V DevOps Tools (DOT)
   компонента Deploy Tools CDJE.
2. Выполнить установку средствами продукта Platform V DevOps Tools (DOT) компонента Deploy Tools CDJE.

### Миграция с версии 4.3.2 на версию 4.4.0

#### Миграция компонент Keycloak на VM

Последовательность действий:

1. Выполнить резервное копирование БД.
2. Выполнить резервное копирование каталога с текущей версии Keycloak на сервере.
3. Выполнить скрипт подготовки Keycloak из дистрибутива `prep-keycloak.sh`.
4. Выполнить проверку и убедиться, что по умолчанию на сервере используется OpenJDK 17, с помощью команды:
    ```shell
    java -version
    ```

#### Миграция Proxy на VM

При использовании получения секретов из Vault на серверах группы `proxy` выполнить скрипты подготовки из дистрибутива:

- `prep-deployers.sh`;
- `prep-vault-agent.sh`.

> Можно использовать запуск ansible-playbook выполняющий скрипты подготовки, идущий в составе дистрибутива.

После подготовки серверов и настройки профиля развертывания необходимо выполнить установку с помощью запуска
ansible-playbook.

### Миграция с версии 4.3.2 на версию 4.3.3

- при миграции в Kubernetes/OpenShift с использованием компонента Deploy tools (CDJE) продукта Platform V DevOps Tools (
  DOT), необходимо выполнить очистку проекта от манифестов IAM Proxy средствами компонента Deploy tools (CDJE). Это
  обусловлено тем что были исправлены замечания в части именования полей, которые являются неизменяемыми в среде
  Kubernetes/OpenShift. Настройка функции очистки в параметрах запуска jenkins job описана в
  разделе [Удаление ресурсов из namespace Kubernetes/OpenShift](proxy-deploy-ose-cd.md).

### Миграция с версии 4.3.0 на версию 4.3.2

#### Миграция Proxy

- при миграции необходимо учесть, что по endpoint `/proxy/` будет отдаваться стартовая страница (а не информация о
  версии, как ранее) и он будет закрыт аутентификацией. Для получения информации о версии нужно
  использовать `/proxy/version`, он доступен без аутентификации;
- технические endpoints статуса сервиса теперь доступны по всем интерфейсам, а не как ранее только по `127.0.0.1`, и
  теперь их следует использовать в Kubernetes/OpenShift для `livenessProbe` и `readinessProbe`.

### Миграция с версий 4.2.0 на версии 4.3.*

#### Миграция Proxy

- при миграции необходимо учесть, что новая версия не поддерживает протокол TLS v.1.1;
- изменились endpoints html-страниц. Добавлен контекст `/proxy/`.

### Миграция с версий 4.0.1 и 4.0.5 на версии 4.1.*

#### Миграция компонент Keycloak

Миграция данных БД Keycloak не выполняется. Последовательность действий:

1. Выполнить резервное копирование БД.
2. Выполнить резервное каталога с текущей версии Keycloak на сервере.
3. Выполнить скрипт подготовки Keycloak из дистрибутива `prep-keycloak.sh`.
4. Выполнить проверку и убедиться, что по умолчанию на сервере используется OpenJDK 17, с помощью команды:

```shell
java -version
```

5. Добавить/заменить в профиле развертывания параметры (в `keycloak.yml`):

```yaml
keycloak_home: "/opt/keycloak"
keycloak_extract_distrib: "{{ keycloak_home }}" # default "/opt" для старой версии и винильного дистрибутива keycloak
keycloak_force_install: True # принудительная полная установка keycloak, с предварительным удалением всех старых каталогов/файлов

keycloak_deploy_run_sync_users: False # запуск синхронизации пользователей при развертывании (запуск будет при наличии изменений в конфигурации)
keycloak_deploy_run_sync_data: True # запуск синхронизации справочников при развертывании (запуск будет при наличии изменений в конфигурации)
keycloak_events_to_syslog: False # отправка событий аудита в Syslog-ng
keycloak_events_to_audit2: False # отправка событий аудита в Platform V Audit SE (AUDT)
keycloak_use_policy_unique_characters: True # использовать парольную политику "новый пароль должен отличаться от старого на Х символов"
keycloak_use_esia: True # использовать аутентификацию в ЕСИА
keycloak_use_scim: False # публиковать SCIM API
keycloak_metrics_enabled: True # публиковать метрики Prometheus на https://<keycloak-host>:9993/metrics , https://<keycloak-host>/auth/realms/<realm>/metrics
keycloak_undeploy_modules: [ ]
#deploy_keycloak_version: "16.0.0" # Закомментировать
```

6. Заменить имена файлов модулей в параметре `keycloak_deploy_custom_modules`(в `keycloak.yml`) на новые:
    - `platformauth-keycloak-identity-adapters.war` → `kcse-keycloak-identity-adapters.jar`;
    - `platformauth-esia-idp.jar` → `kcse-esia-idp.jar`;
    - `platformauth-crypto-pro.war` → `kcse-crypto-pro.jar`;
    - `platformauth-extended-idp.jar` → `kcse-extended-idp.jar`;
    - `platformauth-audit-sender.war` → `kcse-audit-sender.jar`.

7. Добавить при необходимости развертывание модулей через параметр `keycloak_deploy_custom_modules` или оставить его
   пустым `keycloak_deploy_custom_modules: []`. Пример добавления модуля КриптоПРО:

```yaml
keycloak_deploy_custom_modules:
  - kcse-crypto-pro.jar # при использовании КриптоПРО для работы с ГОСТ-подписью
```

### Миграция с версий 3.* на версии 4.1.*

Процедура не предусмотрена. Необходимо произвести повторное развертывание.

### Миграция компонент версий 4.* c ОС RHEL на АльтЛинукс

Поддержка ОС ALT Linux появилась в версиях 4.1.*. В связи с этим, для миграции решений необходимо воспользоваться
инструкцией из раздела о миграции решения на версию 4.1.

## Обновление и удаление ответвлений

Работа с ответвлениями представляет собой процессы связанные с их созданием (описано выше) изменением и удалением. Для
решения задачи по изменению ответвлений, необходимо:

1. Изменить эти параметры в файле `ansible/inventories/StandX/group_vars/all/main.yml`, в теге `proxy_jct_list` (
   детальное описание смотрите в разделе по созданию профиля стенда).
2. Запустить установку/обновление сервиса с помощью развертывания, описанную в
   пункте ["Установка сервиса на сервера стенда"](installation.md).

Для удаления ответвления необходимо:

1. В файле `ansible/inventories/StandX/group_vars/all/main.yml`, в теге `proxy_jct_list` найти необходимое ответвление (
   junction) и удалить его вместе с внутренним содержимым.
2. Запустить установку/обновление сервиса с помощью развертывания, описанную в
   пункте ["Установка сервиса на сервера стенда"](installation.md).

## Изменения в системных требованиях

В таблице ниже приведены все изменения версий ПО.

|  Наименование ПО  |  Статус   | Предыдущая версия | Новая версия |
|:-----------------:|:---------:|:-----------------:|:------------:|
| Platform V SynGX  | Обновлено |       3.3.1       |    3.5.1     |

## Сценарий обновления 1

**Стратегия обновления**:
Обновление выполняется без остановки сервисов. Используется для баз данных с поддержкой горячих резервных копий и миграций.

### Шаги обновления

1. Выполните миграцию данных: `bash psql -U postgres -d iam_db -f /opt/db-migrations/v1.8.35.sql`.
2. Обновите PostgreSQL: `bash sudo apt-get install postgresql-14`.
3. Проверьте целостность данных: `bash pg_dump -U postgres iam_db > iam_db_check.sql`.

### Проверка обновления

1. Проверьте версию БД: `bash psql -U postgres -c "SELECT version();`.
2. Выполните тестовые запросы: `bash psql -U postgres -d iam_db -c "SELECT * FROM users LIMIT 10;`.

## Сценарий обновления 2 
**Стратегия обновления**:  
Ручное обновление компонента IAM Proxy на основе нового дистрибутива с минимальными перерывами в работе.  

### Шаги обновления  
1. **Подготовка окружения**:  
   - остановите службу IAM Proxy:  
     ```shell
     systemctl stop iamproxy
     ```  
   - убедитесь, что текущая версия записана для сравнения после обновления.  

2. **Замена файлов**:  
   - замените содержимое директории `/opt/iamproxy` новым дистрибутивом;  
   - сохраните старый конфигурационный файл (`iamproxy.conf`) для проверки.  

3. **Обновление зависимостей**:  
   - выполните команду для установки новых зависимостей:  
     ```shell
     yum update -y
     ```  

4. **Перезапуск сервиса**:  
   - перезапустите IAM Proxy:  
     ```shell
     systemctl start iamproxy
     ```  

5. **Проверка логов**:  
   - убедитесь, что в `/opt/iamproxy/logs/error.log` отсутствуют ошибки.  
    
### Проверка обновления  
1. **Проверка версии**:  
   - выполните команду:  
     ```shell
     /opt/iamproxy/bin/iamproxy --version
     ```  
   - сравните вывод с ожидаемой версией.  

2. **Тестирование функциональности**:  
   - отправьте тестовый запрос через прокси и проверьте его обработку;  
   - убедитесь, что аутентификация и авторизация работают корректно.  

3. **Проверка интеграции**:  
   - убедитесь, что интеграция с KeyCloak.SE и Platform V Audit SE не нарушена.  
    
## Сценарий обновления 3  
**Стратегия обновления**:  
Автоматизированное обновление через CI/CD-процесс с использованием Ansible Playbook.  

### Шаги обновления  
1. **Подготовка репозитория**:  
   - загрузите новый дистрибутив в Nexus;  
   - обновите переменные в Ansible Playbook:  
     ```yaml
     nexus_url: "https://nexus.mycompany.ru/repo/iamproxy-latest.tar.gz"
     ```  

2. **Выполнение Playbook**:  
   - запустите Playbook:  
     ```shell
     ansible-playbook -i inventory/hosts update-iamproxy.yml
     ```  
   - Playbook выполняет:  
     - остановку сервиса;  
     - замену файлов;  
     - перезапуск сервиса.  

3. **Проверка состояния**:  
   - используйте Ansible для проверки статуса сервиса:  
     ```yaml
     - name: Check IAM Proxy status
       systemd:
         name: iamproxy
         state: running
     ```  
    
### Проверка обновления для IAM Proxy  
1. **Мониторинг метрик**:  
   - проверьте Prometheus-метрики в Grafana:  
     - `iamproxy_up{job="iamproxy"}` должен быть `1`;  
     - убедитесь, что количество обработанных запросов (`iamproxy_requests_total`) увеличивается.  

2. **Логи Fluent Bit**:  
   - проверьте, что события из `/var/log/messages` отправляются в Platform V Audit SE.  

3. **Ротация конфигураций**:  
   - убедитесь, что параметры в `iamproxy.conf` совпадают с новой версией.  

4. **Тестирование отказоустойчивости**:  
   - вызовите нагрузку на прокси и проверьте корректность обработки запросов.  

> **Примечание**: В случае ошибок воспользуйтесь [Чек-листом валидации] для диагностики.  
